tf-rds-nonprod.tf
data "aws_availability_zones" "available" {}

#module "vpc" {
#  source  = "terraform-aws-modules/vpc/aws"
#  version = "2.77.0"
#
#  name                 = "education"
#  cidr                 = "10.0.0.0/16"
#  azs                  = data.aws_availability_zones.available.names
#  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
#  enable_dns_hostnames = true
#  enable_dns_support   = true
#}

resource "aws_db_subnet_group" "tf-rds-nonprod-subnet-group" {
  name       = "tf-rds-nonprod-subnet-group"
  subnet_ids = module.vpc-nonprod.public_subnets

  tags = {
    Terraform = "true"
    Environment = var.envnonprod
    Project = var.project
  }
}

resource "aws_security_group" "tf-sg-rds-nonprod" {
  name   = "tf-sg-rds-nonprod"
  vpc_id = module.vpc-nonprod.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Terraform = "true"
    Environment = var.envnonprod
    Project = var.project
  }
}

resource "aws_db_parameter_group" "tf-rds-nonprod-param-group" {
  name   = "tf-rds-nonprod-param-group"
  family = "postgres14"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "tf-rds-nonprod" {
  identifier             = "tf-rds-nonprod"
  instance_class         = "db.t3.micro"
  allocated_storage      = 5
  engine                 = "postgres"
  engine_version         = "14.1"
  username               = "psqladmin"
  password               = "Zylius34!!"
  db_subnet_group_name   = aws_db_subnet_group.tf-rds-nonprod-subnet-group.name
  vpc_security_group_ids = [aws_security_group.tf-sg-rds-nonprod.id]
  parameter_group_name   = aws_db_parameter_group.tf-rds-nonprod-param-group.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}
